# OTUS_Prof_Project

./: .gitignore  CMakeLists.txt  README.md  README.txt  conanfile.txt
src/: CMakeLists.txt  main.cpp
src/ObjectSearcher/: ObjectSearcher.cpp  ObjectSearcher.h
src/QueueFrame/: CMakeLists.txt  IQueueFrame.h  QueueFrame.cpp  QueueFrame.h
src/RtspClient/: CMakeLists.txt  RtspClient.cpp  RtspClient.h
test/: CMakeLists.txt  trafficRecorder_gtest.cpp
